# FlightGearSimulator

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  FilesWriterAlgo.h  MyClientHandler.cpp  MyClientHandler.h  MyParraleleServer.cpp  MyParraleleServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  PriorityQueue.h  README.md  Searchable.h  SearchableMatrix.cpp  SearchableMatrix.h  Searcher.h  SearcherSolver.h  Server.h  Solver.h  StringReverser.cpp  StringReverser.h  StructSearchResult.h  cachefile.txt  main.cpp
